# Gens documentation.

AUTOMAKE_OPTIONS = foreign

dist_doc_DATA = \
	../AUTHORS.txt \
	../COPYING.txt \
	../INSTALL.txt \
	../NEWS.txt \
	../README.txt \
	BUGS.txt \
	genecyst_save_file_format.txt \
	gens.txt \
	gfdl-1.3.txt \
	history.txt \
	lgpl-2.1.txt \
	TODO.txt

manualdir = $(docdir)/manual
manual_DATA = \
	manual/index.html \
	manual/gens.css \
	manual/dialog-ca.html \
	manual/io-config.html \
	manual/io-teamplayer.html \
	manual/menu-cpu.html \
	manual/menu-file.html \
	manual/menu-graphics.html \
	manual/menu-options.html \
	manual/menu-plugins.html \
	manual/menu-sound.html \
	manual/plugin-manager.html \
	manual/plugin-gamegenie.html \
	manual/plugin-render.html \
	manual/plugin-vlopt.html

manual_iconsdir = $(docdir)/manual/icons
manual_icons_DATA = \
	manual/icons/2rightarrow.png \
	manual/icons/application-exit.png \
	manual/icons/binary.png \
	manual/icons/chronometer.png \
	manual/icons/color-picker.png \
	manual/icons/document-open-folder.png \
	manual/icons/document-open.png \
	manual/icons/document-revert.png \
	manual/icons/document-save-as.png \
	manual/icons/document-save.png \
	manual/icons/edit-copy.png \
	manual/icons/media-optical.png \
	manual/icons/memory.png \
	manual/icons/modem.png \
	manual/icons/preferences-desktop-gaming.png \
	manual/icons/preferences-system.png \
	manual/icons/view-fullscreen.png \
	manual/icons/viewmag.png \
	manual/icons/view-refresh.png \
	manual/icons/window-close.png

manual_imagesdir = $(docdir)/manual/images
manual_images_DATA = \
	manual/images/gens-gs-r7.png \
	manual/images/dialog-ca.png \
	manual/images/io-config.png \
	manual/images/menu-cpu.png \
	manual/images/menu-file.png \
	manual/images/menu-graphics.png \
	manual/images/menu-options.png \
	manual/images/menu-plugins.png \
	manual/images/menu-sound.png \
	manual/images/plugin-manager.png \
	manual/images/plugin-gamegenie.png \
	manual/images/plugin-vlopt.png

manual_images_dialog_cadir = $(docdir)/manual/images/dialog-ca
manual_images_dialog_ca_DATA = \
	manual/images/dialog-ca/ca-original.png \
	manual/images/dialog-ca/ca-contrast-d50.png \
	manual/images/dialog-ca/ca-contrast-u50.png \
	manual/images/dialog-ca/ca-brightness-d50.png \
	manual/images/dialog-ca/ca-brightness-u50.png \
	manual/images/dialog-ca/ca-grayscale.png \
	manual/images/dialog-ca/ca-inverted.png \
	manual/images/dialog-ca/ca-scale-raw.png \
	manual/images/dialog-ca/ca-scale-full.png \
	manual/images/dialog-ca/ca-scale-full-sh.png

manual_images_renderdir = $(docdir)/manual/images/render
manual_images_render_DATA = \
	manual/images/render/render-normal.png \
	manual/images/render/render-double.png \
	manual/images/render/render-2xsai.png \
	manual/images/render/render-blargg-ntsc.png \
	manual/images/render/render-epx.png \
	manual/images/render/render-epx-plus.png \
	manual/images/render/render-hq2x.png \
	manual/images/render/render-hq3x.png \
	manual/images/render/render-hq4x.png \
	manual/images/render/render-interpolated.png \
	manual/images/render/render-interpolated-scanline.png \
	manual/images/render/render-interpolated-scanline-25.png \
	manual/images/render/render-interpolated-scanline-50.png \
	manual/images/render/render-scale2x.png \
	manual/images/render/render-scale3x.png \
	manual/images/render/render-scale4x.png \
	manual/images/render/render-scanline.png \
	manual/images/render/render-scanline-25.png \
	manual/images/render/render-scanline-50.png \
	manual/images/render/render-super-2xsai.png \
	manual/images/render/render-super-eagle.png

mdpdocdir = $(docdir)/mdp
mdpdoc_DATA = \
	mdp/index.html \
	mdp/mdp.css \
	mdp/history.html \
	mdp/mdp_h.html \
	mdp/mdp_dlopen_h.html \
	mdp/mdp_error_h.html \
	mdp/mdp_host_h.html \
	mdp/mdp_render_h.html \
	mdp/mdp_version_h.html
