# Gens images.

if !GENS_OS_WIN32

dist_pkgdata_DATA = \
	gensgs_48x48.png \
	gensgs_32x32.png \
	gensgs_16x16.png \
	gens_32x32.png \
	gens_16x16.png \
	gens_md.png \
	gens_big.bmp \
	gens_small.png \
	sonic_32x32.png \
	sonic_16x16.png \
	sonic_wait.png \
	2rightarrow.png \
	modem.png \
	binary.png \
	memory.png \
	viewmag.png \
	xpaint.png \
	chronometer.png \
	dialog-password.png \
	preferences-system.png \
	preferences-desktop-gaming.png \
	document-open-folder.png \
	kbugbuster.png

else

noinst_DATA = \
	win32/gensgs.ico \
	win32/gens.ico \
	win32/gens_md.ico \
	gens_big.bmp \
	win32/gens_small.bmp \
	win32/sonic.ico \
	win32/sonic_wait.ico \
	win32/ARW07DN.ico \
	win32/ARW07UP.ico

endif

##pkgdata_DATA = @GUIINST_HACK@
