dist_pkgdata_DATA = \
	Gens2.ico \
	bitmap1.png \
	bmp00000.png \
	bmp00001.png \
	bmp00002.png \
	bmp00003.png \
	bmp00004.png \
	bmp00005.png \
	bmp00006.png \
	gens.ico \
	gens_big.bmp \
	gens_small.png \
	sonic.ico \
	sonic2.ico \
	file_text.png \
	2rightarrow.png \
	Modem.png \
	binary.png \
	cdrom2_unmount.png \
	editcopy.png \
	filleclose.png \
	folder_slin_open.png \
	history.png \
	kmix.png \
	ksysguard.png \
	memory.png \
	package_games.png \
	package_settings.png \
	password.png \
	reload.png \
	resource.png \
	viewmag.png \
	viewmag1.png \
	xpaint.png
	
##pkgdata_DATA = @GUIINST_HACK@
