dist_pkgdata_DATA = \
	Gens2.ico \
	gens.ico \
	gens_big.bmp \
	gens_small.png \
	sonic.ico \
	sonic2.ico \
	2rightarrow.png \
	modem.png \
	binary.png \
	folder_slin_open.png \
	history.png \
	kmix.png \
	ksysguard.png \
	memory.png \
	package_games.png \
	package_settings.png \
	password.png \
	resource.png \
	viewmag.png \
	xpaint.png
	
##pkgdata_DATA = @GUIINST_HACK@
