dist_pkgdata_DATA = \
	Gens2.ico \
	gens.ico \
	gens_big.bmp \
	gens_small.png \
	sonic.ico \
	sonic2.ico \
	2rightarrow.png \
	modem.png \
	binary.png \
	memory.png \
	viewmag.png \
	xpaint.png \
	chronometer.png \
	dialog-password.png \
	preferences-system.png \
	preferences-desktop-gaming.png \
	document-open-folder.png
	
##pkgdata_DATA = @GUIINST_HACK@
